[package]
name = "rust-flag"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rand = "0.7.3"

[profile.release]
debug = false
rpath = false
lto = true
debug-assertions = false
panic = "abort"
